# numerical-methods-explorer

./: .gitignore  CMakeLists.txt
include/: FunctionEvaluator.h  GradientDescent.h  IterationData.h  Matrix.h  NewtonMethod.h  NumericalMethod.h  PlotWidget.h  Vec.h  mainwindow.h
math/: FunctionEvaluator.cpp  GradientDescent.cpp  GradientDescent.cpp.autosave  NewtonMethod.cpp
src/: Matrix.cpp  PlotWidget.cpp  Vec.cpp  Vec.cpp.autosave  main.cpp  mainwindow.cpp
ui/: mainwindow.ui
